src/snapshots/enderpy__lexer__tests__f-string-literals-5.snap
---
source: src/lexer.rs
description: "f\"\"\"hello\"\"\""
---
[
    Token {
        kind: FString,
        value: Str(
            "f\"\"\"hello\"\"\"",
        ),
        start: 0,
        end: 12,
    },
]
