src/snapshots/enderpy__lexer__tests__f-string-literals-6.snap
---
source: src/lexer.rs
description: "f'''hello'''"
---
[
    Token {
        kind: FString,
        value: String(
            "f'''hello'''",
        ),
    },
]
