src/snapshots/enderpy__lexer__tests__identifiers-0.snap
---
source: src/lexer.rs
description: a
---
[
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
]
