src/snapshots/enderpy__lexer__tests__identifiers-2.snap
---
source: src/lexer.rs
description: _a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "_a",
        ),
        start: 0,
        end: 2,
    },
]
