src/snapshots/enderpy__lexer__tests__identifiers-5.snap
---
source: src/lexer.rs
description: a_a_
---
[
    Token {
        kind: Identifier,
        value: String(
            "a_a_",
        ),
    },
]
