src/snapshots/enderpy__lexer__tests__import-0.snap
---
source: src/lexer.rs
description: import a
---
[
    Token {
        kind: Import,
        value: None,
    },
    Token {
        kind: Identifier,
        value: String(
            "a",
        ),
    },
]
