src/snapshots/enderpy__lexer__tests__import-2.snap
---
source: src/lexer.rs
description: import a.b.c
---
[
    Token {
        kind: Import,
        value: None,
        start: 0,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: Dot,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: Dot,
        value: None,
        start: 10,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 11,
        end: 12,
    },
]
